# TREX

./: .gitignore  .gitmodules  .pkg  CMakeLists.txt  LICENSE  README.md
Algorithms/: BipartiteGraphAlgorithms.h  DepthFirstSearch.h  StronglyConnectedComponents.h  UnionFind.h
Algorithms/CH/: CH.h
Algorithms/CSA/: CSA.h  DijkstraCSA.h  HLCSA.h  ProfileCSA.h  Profiler.h  TimeShits.h  ULTRACSA.h
Algorithms/Dijkstra/: DialDijkstra.h  Dijkstra.h  RadixDijkstra.h
Algorithms/MLTB/: BorderStops.h
Algorithms/MaxFlowMinCut/: Dinic.h
Algorithms/PTL/: Profiler.h  Query.h
Algorithms/RAPTOR/: DijkstraRAPTOR.h  HLRAPTOR.h  InitialTransfers.h  MCR.h  McRAPTOR.h  MultimodalMCR.h  MultimodalULTRAMcRAPTOR.h  Profiler.h  RAPTOR.h  ULTRAMcRAPTOR.h  ULTRARAPTOR.h
Algorithms/TD/: Profiler.h  Query.h
Algorithms/TE/: Profiler.h  Query.h
Algorithms/TREX/: BorderStops.h
Algorithms/TimeDep/: Query.h
Algorithms/TripBased/: TimestampedReachedIndex.h
DataStructures/Attributes/: Attribute.h  AttributeHandle.h  AttributeNames.h  AttributeRecord.h  Attributes.h
DataStructures/CSA/: Data.h
DataStructures/Container/: ExternalKHeap.h  IndexedSetBranchless.h  Map.h  SIMD16u.h  Set.h  radix_heap.h
DataStructures/GTFS/: Data.h
DataStructures/Geometry/: CoordinateTree.h  Metric.h  Point.h  Rectangle.h
DataStructures/Graph/: Graph.h
DataStructures/MLTB/: MLData.h
DataStructures/MaxFlowMinCut/: FlowGraphs.h
DataStructures/PTL/: Data.h
DataStructures/Partition/: LevelInfo.h  MultiLevelCell.h  MultiLevelPartition.h  MultiLevelPartitionBits.h  MultiLevelPartitionOLD.h
DataStructures/Queries/: Queries.h
DataStructures/RAPTOR/: Data.h  MultimodalData.h  TransferModes.h
DataStructures/TD/: Data.h
DataStructures/TE/: Data.h
DataStructures/TREX/: TREXData.h
DataStructures/TimeDep/: Data.h
DataStructures/TransferPattern/: Data.h
DataStructures/TripBased/: Data.h  DynamicEventGraph.h  MultimodalData.h  Shortcut.h
ExternalLibs/: aligned_allocator.h
Helpers/: Calendar.h  Helpers.h  HighlightText.h  Meta.h  MultiThreading.h  TaggedInteger.h  Timer.h  Types.h
Helpers/Console/: CommandLineParser.h  Progress.h  ProgressBar.h
Helpers/FileSystem/: FileSystem.h
Helpers/IO/: File.h  ParserCSV.h  Serialization.h
Helpers/Ranges/: ConcatenatedRange.h  DirectEdgeRange.h  EdgeIntersectionRange.h  EdgeUnionRange.h  IndexRange.h  IndirectEdgeRange.h  Range.h  (+4 more)
Runnables/: Berlin_5_script.sh  Germany_5_script.sh  MLTB.cpp  Makefile  Network.cpp  TP.cpp  TREX.cpp  ULTRA.cpp  createCompactLayoutGraph.script  createKahipCommand.py  downloadExample.sh  gtfsToRAPTOR.script  kahipML.sh  mltb.script  mltbCustomization.script  mtkahypar.sh  prepLayoutGraph.script
Shell/: BasicShell.h  Command.h  LineBuffer.h  ParameterizedCommand.h  Shell.h
(+137 files in other folders)
